# BLE-LAN-SERVER

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: azure-container-webapp.yml  docker-image.yml
agent/: main.py  requirements.txt
ble-lan-server/: Dockerfile  README  requirements.txt  run.py  server_settings.py  views.py
ble-lan-server/templates/: base.html  home.html
ble_lan_server/: .flake8  .gitignore  Dockerfile  LICENSE  README  __init__.py  nginx.conf  pyproject.toml  requirements.txt  run.py  views.py
ble_lan_server/api/: decorators.py
ble_lan_server/api/config/: settings.py
ble_lan_server/api/db/models/: agent.py  ble_device.py
ble_lan_server/api/endpoints/: agent.py  ble.py  client.py
ble_lan_server/api/operations/: client.py  test.py
ble_lan_server/ble_lan_server/: __init__.py  app.py  run.py  views.py  wsgi.py
ble_lan_server/ble_lan_server/api/: decorators.py
ble_lan_server/ble_lan_server/api/config/: __init__.py  settings.py
ble_lan_server/ble_lan_server/api/db/models/: agent.py  ble_device.py
ble_lan_server/ble_lan_server/api/db/schemas/: agent.json
ble_lan_server/ble_lan_server/api/endpoints/: agent.py  ble.py  client.py
ble_lan_server/ble_lan_server/api/operations/: custom_methods.py  test.py  test2.py
ble_lan_server/templates/: footer.html  home.html  imports.html
